--- a/Tadekam.html
+++ b/Tadekam.html
@@ -1287,7 +1287,7 @@
 					<div class="col-xs-10 col-lg-8 applyZeroPadding">
 						<div class="row contactUsRow">
 							<div class="col-xs-12 col-lg-12">
-								Call Us On : +91 9999999999
+								Call Us On : +91 7045504117
 							</div>
 						</div>
 						<div class="row contactUsRow">
@@ -1296,8 +1296,8 @@
 							</div>
 						</div>
 						<div class="row contactUsRow">
-							<div class="col-xs-1 col-lg-4"></div>
-							<div class="col-xs-10 col-lg-4 applyZeroPadding">
+							<div class="col-xs-1 col-lg-3"></div>
+							<div class="col-xs-10 col-lg-6 applyZeroPadding">
 								<div class="row contactUsForm">
 									<div class="col-xs-12 col-lg-12">
 										<div class="row">
@@ -1330,10 +1330,13 @@
 												<textarea name="message" rows="5"></textarea>
 											</div>
 										</div>
+										<div class="row contactDetailsRow contactButtonRow">
+											<div class="btn btn-primary"><a href="#">Submit</a></div>
+										</div>
 									</div>
 								</div>
 							</div>
-							<div class="col-xs-1 col-lg-4"></div>
+							<div class="col-xs-1 col-lg-3"></div>
 						</div>
 					</div>
 					<div class="col-xs-1 col-lg-2">
@@ -1404,7 +1407,7 @@
 									<div class="col-xs-10 col-lg-8">
 										Amrit originates from Sanskrit amrita, which means Immortal. Amrit - the book is a work of deep love and wisdom from the immortal sage Mahavtar Babaji as communicated to Guruji Naushir. It is a guide to practical spirituality filled with incisive insights and spiced with love and humour. It touches all aspects of life and enumerates on how to be in the world, but not OF this world; making our journey on the planet balanced, enjoyable and elevating. This book is a collection of articles written by Guruji Naushir, to communicate with his numerous followers during the years he was doing tapas. Many of his disciples have asked questions pertaining to his though provoking articles. This to and fro communication has also been included, as it reveals a fresh perspective or clarifies the point more lucidly.
 										<div class="row">
-											<div class="btn btn-primary"><a href="#">Buy Now</a></div>
+											<div class="btn btn-primary"><a href="https://www.amazon.in/Wisdom-Mahavtar-Babaji-Guruji-Naushir/dp/9383952369/ref=sr_1_1?s=books&ie=UTF8&qid=1551202000&sr=1-1" target="_blank">Buy Now</a></div>
 										</div>
 									</div>
 									<div class="col-xs-1 col-lg-2"></div>
@@ -1430,9 +1433,9 @@
 								<div class="row bookDescription">
 									<div class="col-xs-1 col-lg-2"></div>
 									<div class="col-xs-10 col-lg-8">
-										Amrit originates from Sanskrit amrita, which means Immortal. Amrit - the book is a work of deep love and wisdom from the immortal sage Mahavtar Babaji as communicated to Guruji Naushir. It is a guide to practical spirituality filled with incisive insights and spiced with love and humour. It touches all aspects of life and enumerates on how to be in the world, but not OF this world; making our journey on the planet balanced, enjoyable and elevating. This book is a collection of articles written by Guruji Naushir, to communicate with his numerous followers during the years he was doing tapas. Many of his disciples have asked questions pertaining to his though provoking articles. This to and fro communication has also been included, as it reveals a fresh perspective or clarifies the point more lucidly.
+										This book is a result of a small accident. More than a year back I set out to write a sequel to my first book AMRIT. Just as I was getting started, my team suggested I should bring out some kind of spiritual diary with daily quotes of inspiration and wisdom. These two or three lines would then be posted on various social media platforms, as a daily feature.
 										<div class="row">
-											<div class="btn btn-primary"><a href="#">Buy Now</a></div>
+											<div class="btn btn-primary"><a href="https://www.amazon.in/Echo-Within-Guruji-Naushir/dp/B07LFYSSB2/ref=sr_1_2?ie=UTF8&qid=1551201927&sr=8-2&keywords=echo+within" target="_blank">Buy Now</a></div>
 										</div>
 									</div>
 									<div class="col-xs-1 col-lg-2"></div>
@@ -1444,92 +1447,77 @@
 									<div class="col-xs-8 col-lg-10">
 										<div class="row">
 											<div class="col-xs-12 col-lg-4 videoHolder">
-												<iframe
-													src="https://www.youtube.com/embed/iza8tDZKW-w?controls=1"
+												<iframe src="https://www.youtube.com/embed/iza8tDZKW-w?controls=1"
 													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 												</iframe>
 											</div>
 											<div class="col-xs-12 col-lg-4 videoHolder">
-												<iframe
-													src="https://www.youtube.com/embed/3DHphl_qLBs?controls=1"
+												<iframe src="https://www.youtube.com/embed/3DHphl_qLBs?controls=1"
 													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 												</iframe>
 											</div>
 											<div class="col-xs-12 col-lg-4 videoHolder">
-												<iframe
-													src="https://www.youtube.com/embed/QjqqTzpj_xw?controls=1"
+												<iframe src="https://www.youtube.com/embed/QjqqTzpj_xw?controls=1"
 													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 												</iframe>
 											</div>
 											<div class="col-xs-12 col-lg-4 videoHolder">
-												<iframe
-													src="https://www.youtube.com/embed/QmtIRy8r4dk?controls=1"
+												<iframe src="https://www.youtube.com/embed/QmtIRy8r4dk?controls=1"
 													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 												</iframe>
 											</div>
 											<div class="col-xs-12 col-lg-4 videoHolder">
-												<iframe
-													src="https://www.youtube.com/embed/-bBmQmMtFzM?controls=1"
+												<iframe src="https://www.youtube.com/embed/-bBmQmMtFzM?controls=1"
 													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 												</iframe>
 											</div>
 											<div class="col-xs-12 col-lg-4 videoHolder">
-												<iframe
-													src="https://www.youtube.com/embed/DDKI2KPh1KY?controls=1"
+												<iframe src="https://www.youtube.com/embed/DDKI2KPh1KY?controls=1"
 													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 												</iframe>
 											</div>
 											<div class="col-xs-12 col-lg-4 videoHolder">
-												<iframe
-													src="https://www.youtube.com/embed/-4NtATdDDPI?controls=1"
+												<iframe src="https://www.youtube.com/embed/-4NtATdDDPI?controls=1"
 													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 												</iframe>
 											</div>
 											<div class="col-xs-12 col-lg-4 videoHolder">
-												<iframe
-													src="https://www.youtube.com/embed/_EmxA34uztM?controls=1"
+												<iframe src="https://www.youtube.com/embed/_EmxA34uztM?controls=1"
 													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 												</iframe>
 											</div>
 											<div class="col-xs-12 col-lg-4 videoHolder">
-												<iframe
-													src="https://www.youtube.com/embed/N6ngtnJssSI?controls=1"
+												<iframe src="https://www.youtube.com/embed/N6ngtnJssSI?controls=1"
 													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 												</iframe>
 											</div>
 											<div class="col-xs-12 col-lg-4 videoHolder">
-												<iframe
-													src="https://www.youtube.com/embed/wy7mtA-pZbo?controls=1"
+												<iframe src="https://www.youtube.com/embed/wy7mtA-pZbo?controls=1"
 													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 												</iframe>
 											</div>
 											<div class="col-xs-12 col-lg-4 videoHolder">
-												<iframe
-													src="https://www.youtube.com/embed/pIUkYsBXxsY?controls=1"
+												<iframe src="https://www.youtube.com/embed/pIUkYsBXxsY?controls=1"
 													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 												</iframe>
 											</div>
 											<div class="col-xs-12 col-lg-4 videoHolder">
-												<iframe
-													src="https://www.youtube.com/embed/tgBFTjyXz8k?controls=1"
+												<iframe src="https://www.youtube.com/embed/tgBFTjyXz8k?controls=1"
 													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 												</iframe>
 											</div>
 											<div class="col-xs-12 col-lg-4 videoHolder">
-												<iframe
-													src="https://www.youtube.com/embed/Eu06tZnXEwg?controls=1"
+												<iframe src="https://www.youtube.com/embed/Eu06tZnXEwg?controls=1"
 													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 												</iframe>
 											</div>
 											<div class="col-xs-12 col-lg-4 videoHolder">
-												<iframe
-													src="https://www.youtube.com/embed/RqKf-pYgfcw?controls=1"
+												<iframe src="https://www.youtube.com/embed/RqKf-pYgfcw?controls=1"
 													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 												</iframe>
 											</div>
 											<div class="col-xs-12 col-lg-4 videoHolder">
-												<iframe
-													src="https://www.youtube.com/embed/pv_7DunISNw?controls=1"
+												<iframe src="https://www.youtube.com/embed/pv_7DunISNw?controls=1"
 													frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 												</iframe>
 											</div>
@@ -1557,22 +1545,32 @@
 							<div class="col-xs-12 col-lg-3 columnFooterInfoText">
 								<div>
 									<span>
-										<img src="images/call.png"/>
-										<span class="footerText">+91 9999999999</span>
+										<img class="footerTextImg" src="images/call.png"/>
+										<span class="footerText">+91 7045504117</span>
 									</span>
 								</div>
 							</div>
 							<div class="col-xs-12 col-lg-5 columnFooterInfoText">
 								<div>
 									<span>
-										<img src="images/mail.png"/>
+										<img class="footerTextImg" src="images/mail.png"/>
 										<span class="footerText">babajitadekam@gmail.com</span>
 									</span>
 								</div>
 							</div>
 							<div class="col-xs-12 col-lg-3 columnFooterInfoText">
 								<div>
-									<span class="footerText">Follow Us<span><img src="images/fb.png"/></span><span><img src="images/youtube.png"/></span><span><img src="images/insta.png"/></span></span>
+									<div class="footerText">Follow Us
+										<a target="_blank" href="https://www.facebook.com/GurujiNaushir/">
+											<img src="images/fb.png"/>
+										</a>
+										<a target="_blank" href="http://www.youtube.com/c/GurujiNaushir">
+											<img src="images/youtube.png"/>
+										</a>
+										<a target="_blank" href="https://www.instagram.com/gurujinaushir/?utm_source=ig_profile_share&igshid=q35jez23btsw">
+											<img src="images/insta.png"/>
+										</a>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -1584,7 +1582,6 @@
 						<div class="col-xs-12 col-lg-1 columnFooterMenu" id="MediaMenuFooter" onclick="menuSelected(event,this.id,true)">Media</div>
 						<div class="col-xs-12 col-lg-1 columnFooterMenu" id="GalleryMenuFooter" onclick="menuSelected(event,this.id,true)">Gallery</div>
 						<div class="col-xs-12 col-lg-1 columnFooterMenu" id="ContactUsMenuFooter" onclick="menuSelected(event,this.id,true)">Connect</div>
-						<div class="col-xs-12 col-lg-1 columnFooterMenu" id="MediaMenuFooter" onclick="menuSelected(event,this.id,true)">Books</div>
 					</div>
 				</div>
 				<div class="col-lg-2 hideForDesktop"></div>
