--- a/Tadekam.html
+++ b/Tadekam.html
@@ -457,7 +457,7 @@
 						</div>
 						<div class="col-xs-2 col-lg-2"></div>
 					</div>
-					<div class="row textRow">
+					<div class="row textRow photoNameRow">
 						<div class="col-xs-2 col-lg-2"></div>
 						<div class="col-xs-8 col-lg-8">
 							By Dr. Seema Khaire
