--- a/Tadekam.html
+++ b/Tadekam.html
@@ -1307,31 +1307,31 @@
 											And We Will Get In Touch With You Shortly
 										</div>
 										<div class="row contactDetailsRow">
-											<div class="col-xs-3 col-lg-3">Name*</div>
+											<div class="col-xs-3 col-lg-3 labelContactUs">Name*</div>
 											<div class="col-xs-8 col-lg-8">
 												<input type="textbox" name="Name"/>
 											</div>
 										</div>
 										<div class="row contactDetailsRow">
-											<div class="col-xs-3 col-lg-3">Email ID*</div>
+											<div class="col-xs-3 col-lg-3 labelContactUs">Email ID*</div>
 											<div class="col-xs-8 col-lg-8">
 												<input type="textbox" name="email"/>
 											</div>
 										</div>
 										<div class="row contactDetailsRow">
-											<div class="col-xs-3 col-lg-3">Mobile No</div>
+											<div class="col-xs-3 col-lg-3 labelContactUs">Mobile No</div>
 											<div class="col-xs-8 col-lg-8">
 												<input type="textbox" name="mobile"/>
 											</div>
 										</div>
 										<div class="row contactDetailsRow">
-											<div class="col-xs-3 col-lg-3">Message</div>
+											<div class="col-xs-3 col-lg-3 labelContactUs">Message</div>
 											<div class="col-xs-8 col-lg-8">
 												<textarea name="message" rows="5"></textarea>
 											</div>
 										</div>
 										<div class="row contactDetailsRow contactButtonRow">
-											<div class="btn btn-primary"><a href="#">Submit</a></div>
+											<div class="btn btn-primary"><a onclick="alert('Currently this feature is not available. Please contact on the number given in the footer')">Submit</a></div>
 										</div>
 									</div>
 								</div>
