--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 						</a>
 					</div>
 					<div class="col-xs-1 col-sm-2 col-lg-2 menuOption">
-						<a class="menuOptionText" id="GalleryMenu" onclick="menuSelected(event,this.id,true)">
-							<div>Gallery</div>
+						<a class="menuOptionText" id="ProgramsMenu" onclick="menuSelected(event,this.id,true)">
+							<div>Programs</div>
 						</a>
 					</div>
 					<div class="col-xs-1 col-sm-2 col-lg-2 menuOption">
@@ -44,13 +44,13 @@
 						</a>
 					</div>
 					<div class="col-xs-1 col-sm-2 col-lg-2 menuOption">
-						<a class="menuOptionText" id="ProgramsMenu" onclick="menuSelected(event,this.id,true)">
-							<div>Programs</div>
+						<a class="menuOptionText" id="GalleryMenu" onclick="menuSelected(event,this.id,true)">
+							<div>Gallery</div>
 						</a>
 					</div>
 					<div class="col-xs-1 col-sm-2 col-lg-2 menuOption">
 						<a class="menuOptionText" id="ContactUsMenu" onclick="menuSelected(event,this.id,true)">
-							<div>Contact Us</div>
+							<div>Connect</div>
 						</a>
 					</div>
 				</div>
@@ -80,8 +80,8 @@
 						</li>
 						<li class="nav-item">
 							<div class="menuOption">
-								<a class="menuOptionText" id="GalleryMenuHamburger" onclick="menuSelected(event,this.id,true)">
-									<div>Gallery</div>
+								<a class="menuOptionText" id="ProgramsMenuHamburger" onclick="menuSelected(event,this.id,true)">
+									<div>Programs</div>
 								</a>
 							</div>
 						</li>
@@ -94,8 +94,8 @@
 						</li>
 						<li class="nav-item">
 							<div class="menuOption">
-								<a class="menuOptionText" id="ProgramsMenuHamburger" onclick="menuSelected(event,this.id,true)">
-									<div>Programs</div>
+								<a class="menuOptionText" id="GalleryMenuHamburger" onclick="menuSelected(event,this.id,true)">
+									<div>Gallery</div>
 								</a>
 							</div>
 						</li>
@@ -1374,7 +1374,7 @@
 					<div class="col-xs-4 col-sm-4 col-lg-5"></div>
 					<div class="col-xs-4 col-sm-4 col-lg-2">
 						<ul class="nav nav-pills nav-justified">
-							<li class="active"><a data-toggle="pill" href="#`">Books</a></li>
+							<li class="active"><a data-toggle="pill" href="#books">Books</a></li>
 							<li><a>/</a></li>
 							<li><a data-toggle="pill" href="#videos">Videos</a></li>
 						</ul>
@@ -1577,12 +1577,12 @@
 						</div>
 					</div>
 					<div class="row footerRow2">
-						<div class="col-xs-12 col-sm-1 col-lg-1 columnFooterMenu footerMenuSelected" id="HomeMenuFooter" onclick="menuSelected(event,this.id,true)">Home</div>
-						<div class="col-xs-12 col-sm-3 col-lg-2 columnFooterMenu" id="AboutTadekamMenuFooter" onclick="menuSelected(event,this.id,true)">About Tadekam</div>
-						<div class="col-xs-12 col-sm-2 col-lg-1 columnFooterMenu" id="ProgramsMenuFooter" onclick="menuSelected(event,this.id,true)">Programs</div>
-						<div class="col-xs-12 col-sm-2 col-lg-1 columnFooterMenu" id="MediaMenuFooter" onclick="menuSelected(event,this.id,true)">Media</div>
-						<div class="col-xs-12 col-sm-2 col-lg-1 columnFooterMenu" id="GalleryMenuFooter" onclick="menuSelected(event,this.id,true)">Gallery</div>
-						<div class="col-xs-12 col-sm-2 col-lg-1 columnFooterMenu" id="ContactUsMenuFooter" onclick="menuSelected(event,this.id,true)">Connect</div>
+						<div class="col-xs-12 col-sm-2 col-lg-2 columnFooterMenu footerMenuSelected" id="HomeMenuFooter" onclick="menuSelected(event,this.id,true)">Home</div>
+						<div class="col-xs-12 col-sm-2 col-lg-2 columnFooterMenu" id="AboutTadekamMenuFooter" onclick="menuSelected(event,this.id,true)">About Us</div>
+						<div class="col-xs-12 col-sm-2 col-lg-2 columnFooterMenu" id="ProgramsMenuFooter" onclick="menuSelected(event,this.id,true)">Programs</div>
+						<div class="col-xs-12 col-sm-2 col-lg-2 columnFooterMenu" id="MediaMenuFooter" onclick="menuSelected(event,this.id,true)">Media</div>
+						<div class="col-xs-12 col-sm-2 col-lg-2 columnFooterMenu" id="GalleryMenuFooter" onclick="menuSelected(event,this.id,true)">Gallery</div>
+						<div class="col-xs-12 col-sm-2 col-lg-2 columnFooterMenu" id="ContactUsMenuFooter" onclick="menuSelected(event,this.id,true)">Connect</div>
 					</div>
 				</div>
 				<div class="col-lg-2 hideForDesktop"></div>
