--- a/Tadekam.html
+++ b/Tadekam.html
@@ -1307,33 +1307,38 @@
 										<div class="row">
 											And We Will Get In Touch With You Shortly
 										</div>
-										<div class="row contactDetailsRow">
-											<div class="col-xs-3 col-lg-3 labelContactUs">Name*</div>
-											<div class="col-xs-8 col-lg-8">
-												<input type="textbox" name="Name"/>
+										<form id="formContactUs" onsubmit="return false">
+											<div class="row contactDetailsRow">
+												<div class="col-xs-3 col-lg-3 labelContactUs">Name*</div>
+												<div class="col-xs-8 col-lg-8">
+													<input type="textbox" name="name" id="textboxName"/>
+												</div>
 											</div>
-										</div>
-										<div class="row contactDetailsRow">
-											<div class="col-xs-3 col-lg-3 labelContactUs">Email ID*</div>
-											<div class="col-xs-8 col-lg-8">
-												<input type="textbox" name="email"/>
+											<div class="row contactDetailsRow">
+												<div class="col-xs-3 col-lg-3 labelContactUs">Email ID*</div>
+												<div class="col-xs-8 col-lg-8">
+													<input type="email" name="email" id="textboxEmail"/>
+												</div>
 											</div>
-										</div>
-										<div class="row contactDetailsRow">
-											<div class="col-xs-3 col-lg-3 labelContactUs">Mobile No</div>
-											<div class="col-xs-8 col-lg-8">
-												<input type="textbox" name="mobile"/>
+											<div class="row contactDetailsRow">
+												<div class="col-xs-3 col-lg-3 labelContactUs">Mobile No</div>
+												<div class="col-xs-8 col-lg-8">
+													<input type="textbox" name="mobile" id="textboxPhone"/>
+												</div>
 											</div>
-										</div>
-										<div class="row contactDetailsRow">
-											<div class="col-xs-3 col-lg-3 labelContactUs">Message</div>
-											<div class="col-xs-8 col-lg-8">
-												<textarea name="message" rows="5"></textarea>
+											<div class="row contactDetailsRow">
+												<div class="col-xs-3 col-lg-3 labelContactUs">Message</div>
+												<div class="col-xs-8 col-lg-8">
+													<textarea name="message" rows="5" id="textareaMessage"></textarea>
+												</div>
 											</div>
-										</div>
-										<div class="row contactDetailsRow contactButtonRow">
-											<div class="btn btn-primary"><a onclick="alert('Currently this feature is not available. Please contact on the number given in the footer')">Submit</a></div>
-										</div>
+											<div class="row contactDetailsRow">
+												<div class="col-xs-12 col-lg-12" id="errorArea"></div>
+											</div>
+											<div class="row contactDetailsRow contactButtonRow">
+												<input type="submit" value="Submit" onclick="submitContact(event)"/>
+											</div>
+										</form>
 									</div>
 								</div>
 							</div>
