Fixes for iOS and content fixes

--- a/Tadekam.html
+++ b/Tadekam.html
@@ -168,14 +168,14 @@
 				<div class="row textRow">
 					<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 					<div class="col-xs-8 col-sm-10 col-lg-8">
-						Mahavatar Babaji Tadekam Foundation (MBTF) is a unique organization, probably the only one of its kind in the world. The visionary founder of MBTF along with his dedicated team bring simple result-oriented methods to people with the aim of ending the personal suffering and ignorance that humans dwell in and help them to lead lives of joy, excellence and illumination.
+						Mahavatar Babaji Tadekam Foundation (MBTF) is a unique organization, probably the only one of its kind in the world. The visionary founder of MBTF along with his dedicated team offer simple, result-oriented solutions. These practices and methods aim to end the personal suffering and ignorance that people dwell in. They promote lives of joy, excellence and illumination.
 					</div>
 					<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 				</div>
 				<div class="row textRow">
 					<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 					<div class="col-xs-8 col-sm-10 col-lg-8">
-						Tadekam means 'That One' which is the source of all that exists in the physical and spirit form. 'That One' energy which makes creation possible and 'That One' power that controls, sustains, destroys, and recreates all that is seen and unseen.
+						Tadekam means "That One" which is the source of all that exists in the physical and the spirit form. "That One" energy which makes creation possible. "That One" power which controls, sustains, destroys, and recreates all that is seen and unseen.
 					</div>
 					<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 				</div>
@@ -189,7 +189,7 @@
 				<div class="row textRow">
 					<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 					<div class="col-xs-8 col-sm-10 col-lg-8">
-						We offer programs that adopt new methods of operating ancient and traditional principles of human enlightenment, keeping pace with new information and constantly evolving human race.
+						We offer programs that adopt new methods of operating ancient and traditional principles of human enlightenment, keeping pace with a constantly evolving human race.
 					</div>
 					<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 				</div>
@@ -227,7 +227,7 @@
 						<div class="row textRow">
 							<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 							<div class="col-xs-8 col-sm-10 col-lg-8">
-								Guruji Naushir has been spreading the teachings of Mahavatar Babaji since the year 2000, including all the knowledge he has acquired from other Gurus. He founded Tadekam in 2007 to bring all the teachings and spiritual practices under one umbrella. He is in constant communication with Mahavatar Babaji whom he met in 2010.
+								Guruji Naushir has been spreading the teaching's of Mahavatar Babaji since 2000. He also imparts the wisdom and knowledge he has acquired from other Gurus in the course of his journey. He founded Tadekam in 2007 to bring all the teachings and spiritual practices under one umbrella. He is in constant communication with Mahavatar Babaji whom he met in 2010.
 							</div>
 							<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 						</div>
@@ -300,7 +300,7 @@
 										<ul>
 											<li>Learn to master your circumstances rather than be a victim.</li>
 											<li>Learn to swim with the flow of life rather than against it. </li>
-											<li>Learn to seamlessly integrate your journey of self-discovery living a normal life.</li>
+											<li>Learn to seamlessly integrate your journey of self-discovery while leading a regular life.</li>
 											<li>Learn tools and techniques to transform your life towards health, success, confidence and happiness.</li>
 										</ul>
 									</div>
@@ -411,7 +411,7 @@
 				<div class="row textRow">
 					<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 					<div class="col-xs-8 col-sm-10 col-lg-8">
-						Guruji Naushir, a successful professional, was a man of the world, till he met with three sages between 1998 and 2003. This propelled him to take a journey 'within', and from his intense seeking came answers to a human being's deep rooted sufferings and miseries.
+						Guruji Naushir, a successful professional, was a man of the world till he met with three sages between 1998 and 2003. This propelled him to take a journey 'within', and from his intense seeking came answers to the human race's deep-rooted sufferings and miseries.
 					</div>
 					<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 				</div>
@@ -425,7 +425,7 @@
 				<div class="row textRow">
 					<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 					<div class="col-xs-8 col-sm-10 col-lg-8">
-						Mahavatar Babaji, the Omnipresent Guru, who is believed to be over 2000 years old, first started communicating with Guruji Naushir in 2000 leading to his meeting Babaji in person in 2010. In the course of these many years, Mahavatar Babaji, who became famous by Paramahansa Yogananda's book 'Autobiography of a Yogi', has communicated certain spiritual information to Guruji Naushir which is designed into Programs and courses created and conducted under MBTF.
+						Mahavatar Babaji, the Omnipresent Guru, who is believed to be over 2000 years old, first started communicating with Guruji Naushir in 2000. They eventually met in 2010. Mahavatar Babaji, the famous and mysterious sage in Paramahansa Yogananda's book 'Autobiography of a Yogi', communicated certain spiritual information to Guruji Naushir. This led to the designing of the programs and courses conducted under MBTF.
 					</div>
 					<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 				</div>
@@ -469,7 +469,7 @@
 					<div class="row textRow">
 						<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 						<div class="col-xs-8 col-sm-10 col-lg-8">
-							For most people 1st of January is the first day of another year, but for me, in 2005, it was the beginning of a new life as my journey with my Guru had begun. Now more than a decade later as I look back at every enlightening moment I have spent in his presence, I realize how quietly and completely he has changed the lives of innumerable people through his simple and practical spiritual guidance. His practical spirituality and the way he explains what life is all about, has a deep impact on a person's thinking process and old belief system. I would like to share the story of his spiritual journey with you and the incredibly close bond he has with his mentor, his God and his Guru….. Mahavatar Babaji (the ageless, deathless sage of the Himalayas).
+							For most people, the 1st of January is the first day of another year, but for me, in 2005, it was the beginning of a new life as my journey with my Guru had started. Now almost a decade later as I look back at every enlightening moment I have spent in his presence, I realize how quietly and completely he has changed the lives of innumerable people through his simple and practical spiritual guidance. His practical spirituality and the way he explains what life is all about, has a deep impact on a person's thinking process and old belief system. I would like to share the story of his spiritual journey with you and the incredibly close bond he has with his mentor, his God and his Guru….. Mahavatar Babaji (the ageless, deathless sage of the Himalayas).
 						</div>
 						<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 					</div>
@@ -602,21 +602,21 @@
 					<div class="row textRow">
 						<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 						<div class="col-xs-8 col-sm-10 col-lg-8">
-							The balance sheet of Tadekam has only one asset. The asset comprises of the small but growing number of deeply committed individuals who train and work under the Tadekam banner. The collective aim of every individual associated with Tadekam is to accomplish the vision spelt out in the mission statement. 
+							The balance sheet of Tadekam has only one asset. The asset comprises of the small but growing number of deeply committed individuals who train and work under the Tadekam banner. The collective aim of every individual associated with Tadekam is to accomplish the vision outlined in the mission statement.
 						</div>
 						<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 					</div>
 					<div class="row textRow">
 						<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 						<div class="col-xs-8 col-sm-10 col-lg-8">
-							What makes it unique is that all the teachers, organizers, coordinators and supporters work for the organization without any agenda of profit or personal recognition. Their motive is completely altruistic and no effort is spared to fulfil the organization's primary goal of taking humanity from suffering and ignorance to enlightenment. 
+							What makes it unique is that all the teachers, organizers, coordinators and supporters work for the organization without any agenda of profit or personal recognition. Their motive is completely altruistic and no effort is spared to fulfill the organization's primary goal of taking humanity from suffering and ignorance towards enlightenment.
 						</div>
 						<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 					</div>
 					<div class="row textRow">
 						<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 						<div class="col-xs-8 col-sm-10 col-lg-8">
-							All Tadekam Teachers hold the license to teach the various courses and the programs as designed by the founder Guruji Naushir.
+							All Tadekam Teachers hold licenses to teach various courses and programs as designed by the founder Guruji Naushir.
 						</div>
 						<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 					</div>
@@ -680,7 +680,7 @@
 										</div>
 										<div class="programTitle">Breaking Boundaries</div>
 										<div class="row programShortDescription">
-											This two day course has three levels which are carefully crafted to unleash the spiritual potential and power that lies within every human being and helps to break the barrier of physical and mental limitations.
+											This two day course has three levels which are carefully crafted to unleash the spiritual potential and power that lies within every human being. They break the barriers of physical and mental limitations and work energetically to heal and to progress spiritually.
 										</div>
 										<div class="row">
 											<div class="col-xs-4 col-lg-4"></div>
@@ -693,9 +693,9 @@
 											<img src="images/tadekam_kriyas.png" alt=""/>
 										</div>
 										<div class="programTitle">Tadekam Kriyas</div>
-										<div class="row">(Basic and Advance)</div>
+										<div class="row">(Basic and Advanced)</div>
 										<div class="row programShortDescription">
-											These are very simple meditation practices, Mudras and Pranayam given by the Immortal Mahavatar Babaji directly to Guruji Naushir. 
+											These are very simple meditation practices, mudras and pranayam given by the Mahavatar Babaji directly to Guruji Naushir.
 										</div>
 										<div class="row">
 											<div class="col-xs-4 col-lg-4"></div>
@@ -717,7 +717,7 @@
 										</div>
 										<div class="programTitle">Dhyaan Shuddhi Meditation</div>
 										<div class="row programShortDescription">
-											An intense Shiva-centric meditation program to remove negativity through chanting of Mantras and reciting Stotras.
+											An intense Shiva-centric meditation program to remove negativity through the chanting of mantras and reciting of stotras
 										</div>
 										<div class="row">
 											<div class="col-xs-4 col-lg-4"></div>
@@ -857,7 +857,7 @@
 										Dealing with Sexual Harassment
 									</div>
 									<div class="liveSmartSeminarDescription">
-										Learn to deal with sexual harassment at workplace or various other social places
+										Learn to deal with sexual harassment at the workplace and in other social situations
 									</div>
 								</div>
 							</div>
@@ -885,7 +885,7 @@
 										You Cannot Cheat Destiny
 									</div>
 									<div class="liveSmartSeminarDescription">
-										Learn to make better decisions
+										Learn to make better decisions and to understand the role of destiny and freewill
 									</div>
 								</div>
 								<div class="col-xs-12 col-lg-6 liveSmartSeminarInnerColumn">
@@ -903,7 +903,7 @@
 										To Be Or Not To Be Spiritual
 									</div>
 									<div class="liveSmartSeminarDescription">
-										Striking a perfect balance between the material and spiritual aspects of human existence
+										Striking the perfect balance between the material and spiritual aspects of human existence
 									</div>
 								</div>
 								<div class="col-xs-12 col-lg-6 liveSmartSeminarInnerColumn">
@@ -911,7 +911,7 @@
 										Get A Life
 									</div>
 									<div class="liveSmartSeminarDescription">
-										Learn how to strike a work-life balance
+										Learn spiritual principles on how to strike a work-life balance
 									</div>
 								</div>
 							</div>
@@ -921,7 +921,7 @@
 										Passion With A Purpose
 									</div>
 									<div class="liveSmartSeminarDescription">
-										Learn to have a passion with a purpose
+										Learn to work with passion and purpose, to make life more meaningful
 									</div>
 								</div>
 								<div class="col-xs-12 col-lg-6 liveSmartSeminarInnerColumn">
@@ -1303,7 +1303,7 @@
 								<div class="row contactUsForm">
 									<div class="col-xs-12 col-lg-12">
 										<div class="row">
-											Kindly fill the form below
+											Kindly fill in the form below
 										</div>
 										<div class="row">
 											and we will get in touch with you shortly
