--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" media='(min-width: 1024px)' href="css/Tadekam_Desktop.css">
 		<link rel="stylesheet" media='(min-width: 768px) and (max-width: 1023px)' href="css/Tadekam_Tablet.css">
 		<link rel="stylesheet" media='(min-width: 300px) and (max-width: 767px)' href="css/Tadekam_Mobile.css">
+		<link rel="stylesheet" media='(min-width: 300px) and (max-width: 641px)' href="css/Tadekam_Mobile_Small.css">
 		<script src="jquery/jquery-3.3.1.min.js"></script>
 		<script src="bootstrap/js/bootstrap.min.js"></script>
 		<script src="js/Tadekam.js"></script>
