--- a/Tadekam.html
+++ b/Tadekam.html
@@ -190,7 +190,7 @@
 				<div class="row textRow">
 					<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 					<div class="col-xs-8 col-sm-10 col-lg-8">
-						We offer programs that adopt new methods of operating ancient and traditional principles of human enlightenment, keeping pace with a constantly evolving human race.
+						We offer programmes that adopt new methods of operating ancient and traditional principles of human enlightenment, keeping pace with a constantly evolving human race.
 					</div>
 					<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 				</div>
@@ -426,7 +426,7 @@
 				<div class="row textRow">
 					<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 					<div class="col-xs-8 col-sm-10 col-lg-8">
-						Mahavatar Babaji, the Omnipresent Guru, who is believed to be over 2000 years old, first started communicating with Guruji Naushir in 2000. They eventually met in 2010. Mahavatar Babaji, the famous and mysterious sage in Paramahansa Yogananda's book 'Autobiography of a Yogi', communicated certain spiritual information to Guruji Naushir. This led to the designing of the programs and courses conducted under MBTF.
+						Mahavatar Babaji, the Omnipresent Guru, who is believed to be over 2000 years old, first started communicating with Guruji Naushir in 2000. They eventually met in 2010. Mahavatar Babaji, the famous and mysterious sage in Paramahansa Yogananda's book 'Autobiography of a Yogi', communicated certain spiritual information to Guruji Naushir. This led to the designing of the programmes and courses conducted under MBTF.
 					</div>
 					<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 				</div>
@@ -617,7 +617,7 @@
 					<div class="row textRow">
 						<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 						<div class="col-xs-8 col-sm-10 col-lg-8">
-							All Tadekam Teachers hold licenses to teach various courses and programs as designed by the founder Guruji Naushir.
+							All Tadekam Teachers hold licenses to teach various courses and programmes as designed by the founder Guruji Naushir.
 						</div>
 						<div class="col-xs-2 col-sm-1 col-lg-2"></div>
 					</div>
@@ -696,7 +696,7 @@
 										<div class="programTitle">Tadekam Kriyas</div>
 										<div class="row">(Basic and Advanced)</div>
 										<div class="row programShortDescription">
-											These are very simple meditation practices, mudras and pranayam given by the Mahavatar Babaji directly to Guruji Naushir.
+											These are very simple meditation practices, mudras and pranayam given by Mahavatar Babaji directly to Guruji Naushir.
 										</div>
 										<div class="row">
 											<div class="col-xs-4 col-lg-4"></div>
