--- a/index.html
+++ b/index.html
@@ -99,7 +99,16 @@
 				<div class="col-md-3"></div>
 			</div>
 			<div class="row mainContent" id="mainContentConnectMenu">
-				Connect
+				<div class="col-md-2"></div>
+				<div class="col-md-8">
+                    <div class="connectImageHolder">
+                        <img src="images/connect.png"/>
+                    </div>
+                    <div class="connectContent">
+                        Lorem Ipsum
+                    </div>
+                </div>
+				<div class="col-md-2"></div>
 			</div>
 			<div class="row footerBand">
 				Copyright 2020. All Rights Reserved with swapnali.in
