--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
                         <img src="images/about_me.png"/>
                     </div>
                     <div class="aboutMeContent">
-                        Lorem Ipsum
+                        Hello there! I am Swapnali. I have been persuading design as a career since 4 wonderful years. My journey started with a small design studio in Pune and since then I have been exploring ‘design’ in many ways.
+
+						I am specialised in Graphic Design, Illustrations, User Experience & Interface Design. With these expertise, I have been successful in crafting creative campaigns for various bands. My experience in working for clients from startup’s to multinational companies, have enabled me to streamline art, design and functionality.
                     </div>
                 </div>
 				<div class="col-md-3"></div>
