--- a/index.html
+++ b/index.html
@@ -89,15 +89,21 @@
 			<div class="row mainContent" id="mainContentAboutMeMenu">
 				<div class="col-md-3"></div>
 				<div class="col-md-6">
-                    <div class="aboutMeImageHolder">
+                    <div class="row aboutMeImageHolder">
                         <img src="images/about_me.png"/>
-                    </div>
-                    <div class="aboutMeContent">
-                        Hello there! I am Swapnali. I have been persuading design as a career since 4 wonderful years. My journey started with a small design studio in Pune and since then I have been exploring ‘design’ in many ways.
-
-						I am specialised in Graphic Design, Illustrations, User Experience & Interface Design. With these expertise, I have been successful in crafting creative campaigns for various bands. My experience in working for clients from startup’s to multinational companies, have enabled me to streamline art, design and functionality.
-                    </div>
-                </div>
+					</div>
+				
+					<div class="row col-md-12">
+						<div class="aboutMeContent">
+							Hello there! I am Swapnali. I have been persuading design as a career since 4 wonderful years. My journey started with a small design studio in Pune and since then I have been exploring ‘design’ in many ways.
+						</div>
+					</div>
+					<div class="row col-md-12">
+						<div class="aboutMeContent">
+							I am specialised in Graphic Design, Illustrations, User Experience & Interface Design. With these expertise, I have been successful in crafting creative campaigns for various brands. My experience in working for clients from startup’s to multinational companies, have enabled me to streamline art, design and functionality.
+						</div>
+					</div>
+				</div>
 				<div class="col-md-3"></div>
 			</div>
 			<div class="row mainContent" id="mainContentConnectMenu">
