--- a/index.html
+++ b/index.html
@@ -78,12 +78,16 @@
 			<div class="row mainContent mainContentSelected" id="mainContentPortfolioMenu">
 				<div class="col-md-4 workImage">
 						<img src="images/banner-background.jpg"/>
+						<div class="after"></div>
 					</div>
 					<div class="col-md-4 workImage">
 						<img src="images/banner-background.jpg"/>
+						<div class="after"></div>
 					</div>
 					<div class="col-md-4 workImage">
 						<img src="images/banner-background.jpg"/>
+						<div class="after"></div>
+					</div>
 				</div>
 			</div>
 			<div class="row mainContent" id="mainContentAboutMeMenu">
