--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
 	<body>
 		<div class="container-fluid">
 			<div class="row header">
-				<div class="col-xs-3 col-md-2 logoHolder">
+				<div class="col-xs-5 col-md-2 logoHolder">
 					<a class="logo" id="PortfolioMenu" onclick="menuSelected(event,this.id)">
 						<div>
 							<img src='images/logo.png'/>
 						</div>
 					</a>
 				</div>
-				<div class="col-md-7">
-				</div>
+				<div class="col-xs-4 col-md-7"></div>
 				<div class="col-md-3 flatMenu">
 					<div class="col-md-4 menuOption">
 						<a class="menuOptionText menuOptionTextSelected" id="PortfolioMenu" onclick="menuSelected(event,this.id)">
@@ -41,7 +40,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-xs-9 hamburgerMenu">
+				<div class="col-xs-3 hamburgerMenu">
 					<button class=" button navbar-toggler hamburgerButton" type="button" data-toggle="collapse" data-target="#menuNavbar">
 						<span class="glyphicon glyphicon-menu-hamburger"></span>
 					</button>
@@ -76,15 +75,15 @@
 				</div>
 			</div>
 			<div class="row mainContent mainContentSelected" id="mainContentPortfolioMenu">
-				<div class="col-md-4 workImage">
+				<div class="col-xs-12 col-md-4 workImage">
 						<img src="images/banner-background.jpg"/>
 						<div class="after"></div>
 				</div>
-				<div class="col-md-4 workImage">
+				<div class="col-xs-12 col-md-4 workImage">
 					<img src="images/banner-background.jpg"/>
 					<div class="after"></div>
 				</div>
-				<div class="col-md-4 workImage">
+				<div class="col-xs-12 col-md-4 workImage">
 					<img src="images/banner-background.jpg"/>
 					<div class="after"></div>
 				</div>
